--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PopMovies</string>
     <string name="action_settings">Settings</string>
+    <string name="movie_list_image">This is a poster of a movie</string>
 </resources>
