--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">PopMovies</string>
     <string name="action_settings">Settings</string>
     <string name="movie_list_image">This is a poster of a movie</string>
+
+    <!-- Settings strings-->
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_sorting_model_key" translatable="false">sorting_model_key</string>
+    <string name="pref_title_pick_sorter_way">Pick a way to sort</string>
+    <string name="pref_label_sort_by_popular">Most popular</string>
+    <string name="pref_label_sort_by_rating">Top rated</string>
+    <string name="pref_sort_by_popular">popular_movies</string>
+    <string name="pref_sort_by_rating">top_rated_movies</string>
+
 </resources>
