--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="pref_sort_by_rating" translatable="false">top_rated_movies</string>
     <string name="pref_show_favorite_movies" translatable="false">favorite_movies</string>
 
+    <!-- Detail activity -->
+    <string name="details_trailers">Trailers:</string>
+    <string name="mark_as_favorite">Mark as Favorite</string>
+    <string name="poster_content_description">Poster of the movie</string>
+    <string name="play_view">Button to play the video</string>
+
 </resources>
