--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="mark_as_favorite">Mark as Favorite</string>
     <string name="poster_content_description">Poster of the movie</string>
     <string name="play_view">Button to play the video</string>
+    <string name="base_url_youtube" translatable="false">http://www.youtube.com/watch?v=%s1</string>
 
 </resources>
