Add and implement methods to show/hide errors and progress bar during the load of movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">PopMovies</string>
     <string name="action_settings">Settings</string>
 
+    <!-- Movies list activity -->
     <string name="movie_list_image">This is a poster of a movie</string>
+    <string name="empty_movie_list">There is no movies to show</string>
 
     <!-- Settings strings-->
     <string name="title_activity_settings">Settings</string>
