--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Movies list activity -->
     <string name="movie_list_image">This is a poster of a movie</string>
-    <string name="empty_movie_list">There is no movies to show</string>
+    <string name="error_load_movie_list">Error during load of movies</string>
 
     <!-- Settings strings-->
     <string name="title_activity_settings">Settings</string>
