--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="poster_content_description">Poster of the movie</string>
     <string name="play_view">Button to play the video</string>
     <string name="base_url_youtube" translatable="false">http://www.youtube.com/watch?v=%s1</string>
+    <string name="movie_updated">The movie has been updated</string>
+    <string name="error_updating_movie">Error while updating the movie</string>
 
 </resources>
